  some strings are written as words when they should probably be quoted, and 
  that encode/decode are not always exact inverses of each other.
  We've modified the SL0encoder and the SL0parser so
  that they handle a wider range of strings 
- Modified the ISO8601 class by Sayers Craig, HP Labs, Palo Alto, California
  in order to read/write dates in UTC time (as recommended by FIPA)


MAJOR CHANGES IN JADE 2.1 (December 18, 2000)
=============================================
- Fixed bugs in behaviour scheduling (blocked behaviour could not be removed, 
  timers could not be reset properly). 
- Added support for pluggable MTPs (Message Transport Protocols). 
- Added command line options and RMA GUI actions to install and uninstall MTPs. 
- Split the programmer's guide into: this ChangeLog file with the release notes, the
  programmer's guide, and the administrator's guide with installation notes.
- Added arguments to the Agent constructor. They can be passed either from the command-line,
  from the RMA or from the configuration GUI.
- Added capability of moving and cloning agents from the RMA GUI. 
- Added capability of a/deactivating MTPs from command-line, from the RMA or from the   
  configuration GUI.
- Fixed bug in the method reset() of the behaviours. Their scope has been promoted to 
  public and blocked behaviours are waken up after being reset.
- The GUI that displays/edit an ACLMessage has been extended in order to show also the  
  envelope of the message.
- A bug of the sniffer has been removed which did not allow having multiple sniffers on 
  the same containers. The look&feel of the sniffer GUI has also been improved.
- Fixed bug in agent mobility
- the IOR of the agent platform is now written into a different file name, no 
  more JADE.IOR. The name of the file depends now on the container where the 
  MTP is activated (MTPs-MainContainer.txt and MTPs-Container-xx.txt, 
  where xx is the number of the container).